More basic scss-lint fixes

--- a/app/assets/stylesheets/git-scm.scss
+++ b/app/assets/stylesheets/git-scm.scss
@@ -1,4 +1,4 @@
-// @import "normalize";
+@import "normalize";
 @import "mixins";
 @import "variables";
 @import "layout";
@@ -17,7 +17,7 @@
 
 code {
   display: inline;
-  padding: 0px 5px 0px 5px;
+  padding: 0 5px;
 }
 
 pre {
@@ -25,12 +25,12 @@ pre {
   -moz-border-radius: 3px;
   border-radius: 3px;
   display: block;
-  padding: 10px 15px 13px 15px;
+  padding: 10px 15px 13px;
   margin-bottom: 1em;
   background-color: #fff;
   border: solid 1px #efeee6;
   color: #f14e32;
   font-family: Courier, monospace !important;
   line-height: 18px;
-  overflow: auto
+  overflow: auto;
 }
