--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,11 +1,11 @@
 body {
-  margin: 0;
   padding: 0;
+  margin: 0;
+  font-family: $base-font-family;
   font-size: $base-font-size;
   line-height: $base-line-height;
-  font-family: $base-font-family;
   color: $font-color;
-  background: #f0efe7 url(/images/bg/body.jpg);
+  background: #f0efe7 url("/images/bg/body.jpg");
 }
 
 // windows chrome makes a mess of Adelle web font
@@ -24,92 +24,103 @@ body {
 }
 
 aside {
-  width: 218px;
   float: left;
+  width: 218px;
   margin-bottom: 35px;
 }
 
 
 .site-content {
-  width: 702px;
   float: right;
+  width: 702px;
 }
 
 #main {
-  background-color: #fcfcfa;
-  border: solid 1px #e2e0d8;
   @include border-radius(5px);
   padding: 22px;
   margin-bottom: 35px;
+  background-color: #fcfcfa;
+  border: solid 1px #e2e0d8;
 
   .two-column {
     @include clearfix;
+
     .column-left {
-      width: 47%;
       float: left;
-    }
-    .column-right {
       width: 47%;
+    }
+
+    .column-right {
       float: right;
+      width: 47%;
     }
   }
+
   .callout {
-    background-color: $callout-color;
     @include border-radius(3px);
-    padding: 8px 14px 4px 14px;
+    padding: 8px 14px 4px;
     margin-bottom: 1.4em;
+    background-color: $callout-color;
+
     p {
       margin-bottom: 0;
     }
   }
+
   img {
     max-width: 100%;
   }
 }
 
 .masthead {
+  @include background-image-2x('/images/bg/isometric-grid', 35px, 21px, top right, repeat);
   height: 295px;
   margin-top: -20px;
   margin-bottom: 2em;
-  @include background-image-2x('/images/bg/isometric-grid', 35px, 21px, top right, repeat);
 
   .container {
     padding-top: 20px;
+
     p {
       width: 558px;
+      margin-bottom: 1.2em;
       font-size: 18px;
       line-height: $base-line-height * 1.2;
-      margin-bottom: 1.2em;
     }
+
     .promo {
       font-weight: bold;
+
       img {
         position: relative;
         top: -6px;
       }
     }
+
     img.illustration {
       position: absolute;
-      right: -30px;
       top: 24px;
+      right: -30px;
     }
   }
 }
 
 // Header
 header {
-  margin-top: 14px;
   position: relative;
   padding-bottom: 26px;
+  margin-top: 14px;
+
   #tagline {
-    display: block;
     position: absolute;
     top: 11px;
     left: 120px;
+    display: block;
     margin-top: 1px;
-    color: $light-font-color;
     font-size: 24px;
     line-height: 24px;
+    color: $light-font-color;
+
     em {
       letter-spacing: 1px;
     }
@@ -118,40 +129,48 @@ header {
 
 ul.related-material {
   font-weight: normal;
+
   li {
     a {
-      display: inline
+      display: inline;
     }
   }
 }
 
 // Navigation
 aside nav ul {
-  list-style: none;
+  margin-bottom: 1.4em;
+  margin-left: 0;
   font-size: 16px;
   font-weight: bold;
-  margin-left: 0;
-  margin-bottom: 1.4em;
+  list-style: none;
+
   li {
     margin-bottom: 0.5em;
+
     a {
       color: #413932;
+
       &.active, &:hover {
         color: $orange;
       }
     }
+
     ul {
       display: none;
       margin-top: 0.3em;
       margin-left: 20px;
-      font-weight: normal;
       font-size: 13px;
+      font-weight: normal;
+
       li {
         margin-bottom: 0;
+
         a.active {
           font-weight: bold;
         }
       }
+
       &.expanded {
         display: block;
       }
@@ -164,9 +183,11 @@ aside nav ul {
   @include clearfix;
   margin-top: 2em;
   font-weight: bold;
+
   .previous {
     float: left;
   }
+
   .next {
     float: right;
   }
@@ -176,27 +197,31 @@ section.about {
   &.current {
     display: block;
   }
+
   .bottom-nav {
     display: none;
   }
 }
 
-p.center {
+.center {
   text-align: center;
 }
 
 #logo-license {
   @extend .callout;
-  margin-top: 2em;
   padding: 20px ! important;
+  margin-top: 2em;
+
   p {
-    color: $light-font-color;
     font-size: 12px;
     line-height: 1.4;
+    color: $light-font-color;
   }
+
   p + p {
     margin-top: 14px;
   }
+
   img {
     float: left;
     margin-right: 20px;
@@ -204,59 +229,68 @@ p.center {
 }
 
 .callout.downloading {
-  background: $callout-color url(/images/icons/download.png) 24px 24px no-repeat;
   padding: 20px 30px 20px 100px !important;
+  background: $callout-color url(/images/icons/download.png) 24px 24px no-repeat;
+
   h3 {
     font-size: 18px;
     color: $orange;
   }
+
   p {
+    margin-bottom: 15px ! important;
     font-size: 15px;
     line-height: 1.3em;
-    margin-bottom: 15px ! important;
   }
+
   p.small {
-    font-size: 12px;
-    color: $light-font-color;
-    line-height: 1.4;
     margin-bottom: 0 ! important;
+    font-size: 12px;
+    line-height: 1.4;
+    color: $light-font-color;
   }
 }
 
 .section-nav-container {
   @extend .unstyled;
-  position: relative;
-  background-color: #ebe9e1;
-  background-color: rgba(223, 221, 213, .33);
   @include border-radius(3px);
-  padding: 8px 12px 6px 12px;
+  position: relative;
+  padding: 8px 12px 6px;
   margin-bottom: 10px;
   font-size: 13px;
   font-weight: bold;
+  background-color: #ebe9e1;
+  background-color: rgba(223, 221, 213, .33);
+
   .light {
     font-weight: normal;
   }
+
   a {
-    font-weight: bold;
     position: relative;
+    font-weight: bold;
   }
+
   .dropdown-panel {
     top: 33px;
     .three-column {
       @include clearfix;
+
       .column-left {
-        width: 31%;
         float: left;
-        padding-right: 3%
+        width: 31%;
+        padding-right: 3%;
       }
+
       .column-middle {
-        width: 31%;
         float: left;
-        padding-right: 3%
+        width: 31%;
+        padding-right: 3%;
       }
+
       .column-right {
-        width: 31%;
         float: left;
+        width: 31%;
       }
     }
   }
@@ -266,28 +300,31 @@ p.center {
 a.dropdown-trigger {
   padding: 4px 5px;
   border: solid 1px transparent;
+
   &.active {
+    @include border-top-left-radius(3px);
+    @include border-top-right-radius(3px);
     position: relative;
     z-index: 200;
     background-color: #fff ! important;
-    @include border-top-left-radius(3px);
-    @include border-top-right-radius(3px);
     border: solid 1px darken($base-border-color, 8%);
-    border-bottom: none;
+    border-bottom: 0;
   }
 }
 
 .dropdown-panel {
+  @include border-radius(3px);
+  @include box-shadow(0 1px 2px #ccc);
+  position: absolute;
+  z-index: 199;
   display: none;
   background-color: #fff;
   border: solid 1px darken($base-border-color, 8%);
-  position: absolute;
-  z-index: 199;
-  @include border-radius(3px);
-  @include box-shadow(0 1px 2px #ccc);
+
   &.left {
     @include border-top-left-radius(0);
   }
+
   &.right {
     @include border-top-right-radius(0);
   }
@@ -295,17 +332,18 @@ a.dropdown-trigger {
 
 // Footer
 .site-footer {
-  clear: both;
   @include clearfix;
+  padding: 20px 0 40px;
   margin-top: 35px;
-  border-top: solid 1px $base-border-color;
-  padding: 20px 0 40px 0;
-  color: $light-font-color;
+  clear: both;
   font-size: 12px;
   line-height: $base-line-height * 0.7;
+  color: $light-font-color;
+  border-top: solid 1px $base-border-color;
 
   a {
     color: darken($light-font-color, 35%);
+
     &:hover {
       color: darken($light-font-color, 55%);
     }
@@ -313,10 +351,11 @@ a.dropdown-trigger {
 }
 
 .site-source {
-  float: left;
   @include background-image-2x('/images/icons/code', 38px, 23px, 0 2px);
+  float: left;
   padding-left: 46px;
 }
+
 .sfc-member {
   float: right;
   text-align: right;
@@ -326,20 +365,22 @@ table.benchmarks {
   width: 100%;
   padding: 20px;
   margin-bottom: 20px;
-  tr {
-    th.right {
-      text-align: center;
-    }
-    td.desc {
-      font-size: 0.8em;
-      color: #888;
-    }
-    td.number {
-      text-align: right;
-      font-family:monospace;
-    }
-    td {
-     padding: 0 10px;
-    }
+
+  .right {
+    text-align: center;
+  }
+
+  .desc {
+    font-size: 0.8em;
+    color: #888;
+  }
+
+  .number {
+    font-family: monospace;
+    text-align: right;
+  }
+
+  td {
+    padding: 0 10px;
   }
 }
