--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -11,7 +11,7 @@ body {
 // windows chrome makes a mess of Adelle web font
 .windows.chrome body,
 .windows.ie8 body {
-  font-family: $base-font-family-fallback ! important;
+  font-family: $base-font-family-fallback !important;
 }
 
 // High level structure
@@ -97,7 +97,7 @@ aside {
       }
     }
 
-    img.illustration {
+    .illustration {
       position: absolute;
       top: 24px;
       right: -30px;
@@ -127,7 +127,7 @@ header {
   }
 }
 
-ul.related-material {
+.related-material {
   font-weight: normal;
 
   li {
@@ -151,7 +151,8 @@ aside nav ul {
     a {
       color: #413932;
 
-      &.active, &:hover {
+      &.active,
+      &:hover {
         color: $orange;
       }
     }
@@ -166,7 +167,7 @@ aside nav ul {
       li {
         margin-bottom: 0;
 
-        a.active {
+        .active {
           font-weight: bold;
         }
       }
@@ -209,7 +210,7 @@ section.about {
 
 #logo-license {
   @extend .callout;
-  padding: 20px ! important;
+  padding: 20px !important;
   margin-top: 2em;
 
   p {
@@ -238,13 +239,13 @@ section.about {
   }
 
   p {
-    margin-bottom: 15px ! important;
+    margin-bottom: 15px !important;
     font-size: 15px;
     line-height: 1.3em;
   }
 
-  p.small {
-    margin-bottom: 0 ! important;
+  .small {
+    margin-bottom: 0 !important;
     font-size: 12px;
     line-height: 1.4;
     color: $light-font-color;
@@ -259,8 +260,7 @@ section.about {
   margin-bottom: 10px;
   font-size: 13px;
   font-weight: bold;
-  background-color: #ebe9e1;
-  background-color: rgba(223, 221, 213, .33);
+  background-color: rgba(223, 221, 213, 0.33);
 
   .light {
     font-weight: normal;
@@ -273,6 +273,7 @@ section.about {
 
   .dropdown-panel {
     top: 33px;
+
     .three-column {
       @include clearfix;
 
@@ -297,7 +298,7 @@ section.about {
 }
 
 // Dropdowns
-a.dropdown-trigger {
+.dropdown-trigger {
   padding: 4px 5px;
   border: solid 1px transparent;
 
@@ -306,7 +307,7 @@ a.dropdown-trigger {
     @include border-top-right-radius(3px);
     position: relative;
     z-index: 200;
-    background-color: #fff ! important;
+    background-color: #fff !important;
     border: solid 1px darken($base-border-color, 8%);
     border-bottom: 0;
   }
@@ -361,7 +362,7 @@ a.dropdown-trigger {
   text-align: right;
 }
 
-table.benchmarks {
+.benchmarks {
   width: 100%;
   padding: 20px;
   margin-bottom: 20px;
