--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -12,7 +12,7 @@
     Git comes with built-in GUI tools for committing (<a href="/docs/git-gui">git-gui</a>) and browsing (<a href="/docs/gitk">gitk</a>), but there are several third-party tools for users looking for platform-specific experience.
 
   %p
-    =link_to "Only show GUIs for my OS (Linux)", "#", {:class => "subtle-button", :id => "gui-os-filter", 'data-os' => 'linux'}
+    =link_to "Only show GUIs for my OS (Linux)", "#", {:class => "subtle-button gui-os-filter js-gui-os-filter", 'data-os' => 'linux'}
     %span#os-filter-count
       %strong 0
       %span.os Linux
