Clean up downloads section styles

--- a/app/views/downloads/downloading.html.haml
+++ b/app/views/downloads/downloading.html.haml
@@ -24,7 +24,7 @@
   %p
     Now that you have downloaded Git, it's time to start using it.
 
-  %ul#download-next-steps
+  %ul.download-next-steps
     %li
       <a href="/book">
       <img src="/images/icons/nav-read-book.png" />
