--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -13,7 +13,7 @@
 
   %p
     =link_to "Only show GUIs for my OS (Linux)", "#", {:class => "subtle-button gui-os-filter js-gui-os-filter", 'data-os' => 'linux'}
-    %span#os-filter-count
+    %span.os-filter-count.js-os-filter-count
       %strong 0
       %span.os Linux
       GUIs are highlighted below ↓
