--- a/app/views/downloads/index.html.haml
+++ b/app/views/downloads/index.html.haml
@@ -26,7 +26,7 @@
       = partial 'shared/monitor'
 
 
-  %div.callout#more-downloads
+  %div.callout.more-downloads
     %div.two-column
       %div.column-left
         %h2 GUI Clients
