--- a/app/views/downloads/logos/index.html.haml
+++ b/app/views/downloads/logos/index.html.haml
@@ -64,7 +64,7 @@
             &middot;
             =link_to "EPS (vector)", "/images/logos/downloads/Git-Icon-White.eps"
 
-  %div#logo-license
+  %div.logo-license
     %p
       <img src="/images/creative-commons.png" />
       Git Logo by <a href="http://twitter.com/jasonlong">Jason Long</a> is licensed under the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
