--- a/app/assets/stylesheets/downloads.scss
+++ b/app/assets/stylesheets/downloads.scss
@@ -1,28 +1,33 @@
-#logo-license {
+.logo-license {
   @extend .callout;
+  padding: 20px !important;
   margin-top: 2em;
-  padding: 20px ! important;
+
   p {
-    color: $light-font-color;
     font-size: 12px;
     line-height: 1.4;
+    color: $light-font-color;
   }
+
   p + p {
     margin-top: 14px;
   }
+
   img {
     float: left;
     margin-right: 20px;
   }
 }
 
-.callout#more-downloads {
+.more-downloads {
   .column-left {
     width: 47%;
   }
+
   .column-right {
     width: 45%;
   }
+
   p {
     padding-bottom: 1em;
     line-height: 1.4;
@@ -30,85 +35,96 @@
 }
 
 .callout.downloading {
-  background: $callout-color url(/images/icons/download.png) 24px 24px no-repeat;
   padding: 20px 30px 20px 100px !important;
+  background: $callout-color url("/images/icons/download.png") 24px 24px no-repeat;
+
   h3 {
     font-size: 18px;
     color: $orange;
   }
+
   p {
+    margin-bottom: 15px !important;
     font-size: 15px;
     line-height: 1.3em;
-    margin-bottom: 15px ! important;
   }
-  p.small {
+
+  .small {
+    margin-bottom: 0 !important;
     font-size: 12px;
-    color: $light-font-color;
     line-height: 1.4;
-    margin-bottom: 0 ! important;
+    color: $light-font-color;
   }
 }
 
-#download-next-steps {
+.download-next-steps {
   @include clearfix;
   @extend .unstyled;
   padding-top: 24px;
+
   li {
     display: block;
-    width: 200px;
     float: left;
+    width: 200px;
     margin-bottom: 20px;
   }
+
   li + li {
     margin-left: 20px;
   }
+
   a {
     display: block;
     color: $font-color;
     text-align: center;
-    background-position: 0 0;
     background-repeat: no-repeat;
-    -webkit-transition-property: color;
-    -moz-transition-property: color;
-    transition-property: color;
-    -webkit-transition-duration: 0.3s;
+    background-position: 0 0;
     -moz-transition-duration: 0.3s;
     transition-duration: 0.3s;
+    -moz-transition-property: color;
+    transition-property: color;
+    -webkit-transition-property: color;
+    -webkit-transition-duration: 0.3s;
+
     img {
       display: block;
-      margin: 0 auto 10px auto;
+      margin: 0 auto 10px;
       opacity: 0.9;
-      -webkit-transition-property: opacity;
-      -moz-transition-property: opacity;
-      transition-property: opacity;
-      -webkit-transition-duration: 0.3s;
       -moz-transition-duration: 0.3s;
       transition-duration: 0.3s;
+      -moz-transition-property: opacity;
+      transition-property: opacity;
+      -webkit-transition-property: opacity;
+      -webkit-transition-duration: 0.3s;
     }
+
     h3 {
       font-size: 18px;
       font-weight: bold;
       color: $orange;
     }
+
     p {
       font-size: 13px;
       line-height: $base-line-height * 0.8;
     }
   }
+
   a:hover {
     img {
       opacity: 1;
     }
+
     h3 {
       color: darken($orange, 5%);
     }
   }
 }
 
-#os-filter-count {
-  color: $orange;
-  display: none;
-  left: 12px;
+.os-filter-count {
   position: relative;
   top: 8px;
+  left: 12px;
+  display: none;
+  color: $orange;
 }
