Clean up search form

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -19,39 +19,41 @@ input, textarea {
   font-size: 14px;
   outline: none;
 }
+
 .windows.chrome input, .windows.chrome textarea,
 .windows.ie8 input, .windows.chrome textarea {
   font-family: $base-font-family-fallback ! important;
 }
 
-form#search {
-  position: absolute;
-  z-index: 1000;
-  right: 0;
-  top: 10px;
-  width: 262px;
-  padding-left: 32px;
-  @include background-image-2x('/images/icons/search', 17px, 17px, 10px 50%);
-  background-color: #fcfcfa ! important;
-  border: solid 1px #ceccc5;
+.search-form {
+  @include background-image-2x("/images/icons/search", 17px, 17px, 10px 50%);
   @include border-radius(20px);
   @include box-shadow(inset 0 1px 4px #ddd);
+  position: absolute;
+  top: 10px;
+  right: 0;
+  z-index: 1000;
+  width: 262px;
+  padding-left: 32px;
+  background-color: #fcfcfa ! important;
+  border: solid 1px #ceccc5;
 
-  input {
-    @include border-radius(20px);
-    border: none;
-    margin-top: 5px;
-    margin-bottom: 1px;
-    line-height: 1em;
-    width: 100%;
-    height: 20px;
-    background-color: transparent;
-    color: $font-color;
-//    padding: 6px 0 2px 0;
-  }
   &.focus {
-    border-color: #007175;
     background-color: #fff;
+    border-color: #007175;
   }
 }
+
+.search-text {
+  @include border-radius(20px);
+  width: 100%;
+  height: 20px;
+  margin-top: 5px;
+  margin-bottom: 1px;
+  line-height: 1em;
+  color: $font-color;
+  background-color: transparent;
+  border: 0;
+}
+
 
