--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,65 +1,74 @@
-#search-results {
-  display: none;
-  position: absolute;
-  z-index: 900;
-  top: 2px;
-  right: -8px;
-  width: 384px;
-  background: #398a94 url(/images/bg/search-header.jpg) 0 1px repeat-x;
+.search-results {
   @include border-radius(3px);
   @include box-shadow(0 0 7px rgba(0, 0, 0, 0.25));
+  position: absolute;
+  top: 2px;
+  right: -8px;
+  z-index: 900;
+  display: none;
+  width: 384px;
+  background: #398a94 url("/images/bg/search-header.jpg") 0 1px repeat-x;
   border-bottom: solid 1px $base-border-color;
+
   header {
-    text-indent: -9999px;
-    height: 44px;
-    border: solid 1px #366769;
-    padding: 0;
-    margin: 0;
     @include border-top-right-radius(3px);
     @include border-top-left-radius(3px);
+    height: 44px;
+    padding: 0;
+    margin: 0;
+    text-indent: -9999px;
+    border: solid 1px #366769;
   }
+
   table {
-    width: 100%;
-    background-color: #fff;
     @include border-bottom-right-radius(3px);
     @include border-bottom-left-radius(3px);
+    width: 100%;
     line-height: 1;
+    background-color: #fff;
+
     td {
       border-top: solid 1px #cfddde;
     }
-    td.category {
-      font-size: 11px;
-      vertical-align: top;
-      text-align: right;
+
+    .category {
       width: 67px;
       padding: 10px 12px 0 0;
+      font-size: 11px;
       color: $blue;
-      opacity: 0.75;
+      text-align: right;
+      vertical-align: top;
       background-color: #f5fbfb;
       border-right: solid 1px #cfddde;
+      opacity: 0.75;
     }
-    td.matches {
+
+    .matches {
+      padding: 0 !important;
       font-size: 12px;
       font-weight: bold;
-      padding: 0 ! important;
+
       a {
         display: block;
-        color: $font-color;
         padding: 5px 12px;
         margin-bottom: 0;
-        -webkit-transition-duration: 0s;
+        color: $font-color;
         -moz-transition-duration: 0s;
         transition-duration: 0s;
-        span.metadata {
-          line-height: 1;
+        -webkit-transition-duration: 0s;
+
+        .metadata {
+          display: block;
           margin-top: -3px;
           margin-bottom: 3px;
-          display: block;
-          color: $light-font-color;
-          font-weight: normal;
           font-size: 11px;
+          font-weight: normal;
+          line-height: 1;
+          color: $light-font-color;
         }
-        &:hover, &.highlight {
+
+        &:hover,
+        &.highlight {
           color: #fff;
           text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
           background: #55bec4;
@@ -67,57 +76,67 @@
           background-image: -webkit-linear-gradient(#55bec4, #54b2b7);
           background-image: -moz-linear-gradient(#55bec4, #54b2b7);
           background-image: linear-gradient(#55bec4, #54b2b7);
+
           span {
             color: #fff;
           }
         }
       }
     }
+
     ul {
       @extend .unstyled;
       margin-bottom: 0;
     }
-    tr.show-all td {
-      border-top: none;
+
+    .show-all td {
+      border-top: 0;
     }
 
   }
 }
 
-ol.full-search-results {
+.full-search-results {
   @extend .unstyled;
+
   li {
     margin-bottom: 2em;
+
     &:last-child {
       margin-bottom: 0;
     }
   }
+
   h3 {
-    line-height: 1.4;
     padding-bottom: 0;
     margin-bottom: 0;
+    line-height: 1.4;
   }
-  span.relevancy {
+
+  .relevancy {
     float: right;
     padding-left: 5px;
     margin-left: 30px;
+
     img {
       position: relative;
       top: -2px;
     }
   }
-  a.url {
+
+  .url {
     display: block;
+    margin-bottom: 0.4em;
     font-size: 12px;
     color: $light-font-color;
-    margin-bottom: 0.4em;
+
     &:hover {
       color: darken($light-font-color, 25%);
     }
   }
 }
 
-.callout.top-matches {
-  padding-top: 1em ! important;
-  margin-bottom: 2em ! important;
+.top-matches {
+  padding-top: 1em !important;
+  margin-bottom: 2em !important;
 }
