--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,8 +4,9 @@
     <%= raw random_tagline %>
   </span>
 
-  <form id="search" action="/search/results">
-    <input id="search-text" name="search" placeholder="Search entire site..." autocomplete="off" type="text" />
+  <form class="search-form js-search-form" action="/search/results">
+    <input class="search-text js-search-text" name="search" placeholder="Search entire site..." autocomplete="off" type="text" />
   </form>
-  <div id="search-results"></div>
+
+  <div class="search-results js-search-results"></div>
 </header>
