Clean about section

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -194,7 +194,9 @@ aside nav ul {
   }
 }
 
-section.about {
+.about-section {
+  display: none;
+
   &.current {
     display: block;
   }
@@ -210,7 +212,7 @@ section.about {
 
 .callout.downloading {
   padding: 20px 30px 20px 100px !important;
-  background: $callout-color url(/images/icons/download.png) 24px 24px no-repeat;
+  background: $callout-color url("/images/icons/download.png") 24px 24px no-repeat;
 
   h3 {
     font-size: 18px;
