--- a/app/views/about/_branching_and_merging.html.erb
+++ b/app/views/about/_branching_and_merging.html.erb
@@ -1,4 +1,4 @@
-<section class="about current" id="branching-and-merging" style="display: block;">
+<section class="about-section current" id="branching-and-merging">
 
   <h2>Branching and Merging</h2>
 
