--- a/app/views/about/_data_assurance.html.erb
+++ b/app/views/about/_data_assurance.html.erb
@@ -1,4 +1,4 @@
-  <section class="about" id="info-assurance" style="display: none;">
+  <section class="about-section" id="info-assurance">
     <h2>Data Assurance</h2>
     <p>
     The data model that Git uses ensures the cryptographic integrity of every bit
@@ -22,4 +22,4 @@
       <a href="#staging-area" class="next" data-section-id="staging-area">Staging Area →</a>
     </div>
   </section>
- 
+
