--- a/app/views/about/_distributed.html.erb
+++ b/app/views/about/_distributed.html.erb
@@ -1,7 +1,7 @@
-  <section class="about" id="distributed" style="display: none;">
-    
+  <section class="about-section" id="distributed">
+
     <h2>Distributed</h2>
-    
+
     <p>
     One of the nicest features of any Distributed SCM, Git included, is that it's distributed. This means that instead of doing a "checkout" of the current tip of the source code, you do a "clone" of the entire repository.
     </p>
