--- a/app/views/about/_small_and_fast.html.erb
+++ b/app/views/about/_small_and_fast.html.erb
@@ -1,23 +1,23 @@
-  <section class="about" id="small-and-fast" style="display: none;">
+  <section class="about-section" id="small-and-fast">
 
     <h2>Small and Fast</h2>
-    
+
     <p>
       <strong>Git is fast</strong>. With Git, nearly all operations are performed locally, giving it a huge speed advantage on centralized systems that constantly have to communicate with a server somewhere.
     </p>
-    
+
     <p>
       Git was built to work on the Linux kernel, meaning that it has had to effectively handle large repositories from day one. Git is written in C, reducing the overhead of runtimes associated with higher-level languages. Speed and performance has been a primary design goal of the Git from the start.
     </p>
-    
+
     <h3>Benchmarks</h3>
-    
+
     <p>
       Let's see how common operations stack up against
       Subversion, a common centralized version control system that is similar
       to CVS or Perforce. <em>Smaller is faster.</em>
     </p>
-    
+
     <table width="100%">
       <tbody>
         <tr>
@@ -101,7 +101,7 @@
         <tr><td nowrap="">Blame</td><td class="desc">Line annotation of a single file (array.c)</td><td class="number"> 1.91</td><td class="number"> 3.04</td><td class="number">1x</td></tr>
       </tbody>
     </table>
-    
+
     <p>
       Note that this is the best case scenario for SVN - a server with no load with an
       80MB/s bandwidth connection to the client machine.  Nearly all of these
@@ -114,14 +114,14 @@
       one or two orders of magnitude faster than SVN</strong>, even under ideal conditions
       for SVN.
     </p>
-    
+
     <p>
       One place where Git is slower is in the initial clone operation.
       Here, Git is downloading the entire history rather than only the latest
       version. As seen in the above charts, it's not considerably slower for an operation
       that is only performed once.
     </p>
-    
+
     <table class="benchmarks">
       <tbody>
         <tr>
@@ -135,14 +135,14 @@
         <tr><td nowrap="">Size (M)</td><td class="desc">Size of total client side data and files after clone/checkout (in M)</td><td></td><td class="number">181.0</td><td class="number">132.0</td></tr>
       </tbody>
     </table>
-    
+
     <p>
       It's also interesting to note that the size of the data on the client side
       is very similar even though Git also has every version of every file for the
       entire history of the project. This illustrates how efficient it is at compressing
       and storing data on the client side.
     </p>
-    
+
     <div class="bottom-nav" style="display: block;">
       <a href="#branching-and-merging" class="previous" data-section-id="branching-and-merging">← Branching and Merging</a>
       <a href="#distributed" class="next" data-section-id="distributed">Distributed →</a>
