--- a/app/views/about/_staging_area.html.erb
+++ b/app/views/about/_staging_area.html.erb
@@ -1,4 +1,5 @@
- <section class="about" id="staging-area" style="display: none;">
+ <section class="about-section" id="staging-area">
+
     <h2>Staging Area</h2>
     <p>
     Unlike the other systems, Git has something called the "staging area" or "index". This is an intermediate area where commits can be formatted and reviewed before completing the commit.
