--- a/app/views/downloads/index.html.haml
+++ b/app/views/downloads/index.html.haml
@@ -10,7 +10,7 @@
     %div.column-left
       %h1 Downloads
       %div.callout
-        %table.binaries
+        %table.binaries-table
           %tr
             %td= link_to "Mac OS X", "/download/mac", {:class => 'icon mac'}
             %td= link_to "Windows", "/download/win", {:class => 'icon windows'}
