--- a/app/views/downloads/installers/index.html.haml
+++ b/app/views/downloads/installers/index.html.haml
@@ -12,7 +12,7 @@
   %div.two-column
     %div.column-left
       %div.callout
-        %table.binaries
+        %table.binaries-table
           %tr
             %td
               %strong Debian
