--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -1,98 +1,113 @@
 .content-list {
   @extend .unstyled;
   margin-left: 0;
+
   li {
     margin-bottom: 1em;
   }
+
   .description {
     font-size: 12px;
     line-height: $base-line-height * 0.7;
   }
 }
 
-ul.video-thumbnails,
-ul.gui-thumbnails {
+.video-thumbnails,
+.gui-thumbnails {
   @extend .content-list;
   margin-top: 1em;
+
   li {
     margin-bottom: 2em;
+
     img {
       display: block;
-      margin-bottom: 5px;
       padding: 3px;
+      margin-bottom: 5px;
       border: solid 1px $base-border-color;
     }
   }
 }
 
-ul.gui-thumbnails {
-  li.masked {
+.gui-thumbnails {
+  .masked {
     opacity: 0.1;
   }
 }
 
-ul.books-list {
+.books-list {
   @extend .content-list;
+
   li {
     @include clearfix;
     padding-left: 125px;
+
     img {
-      width: 109px;
-      margin-left: -125px;
-      margin-right: -125px;
       float: left;
+      width: 109px;
+      margin-right: -125px;
+      margin-left: -125px;
       border: solid 1px #b7b7b7;
+
       &.creative-commons {
-        width: auto;
-        margin-left: 0;
-        margin-right: 0;
-        float: none;
-        border: none;
-        margin-top: 2em;
         display: block;
+        float: none;
+        width: auto;
+        margin-top: 2em;
+        margin-right: 0;
+        margin-left: 0;
+        border: 0;
       }
     }
   }
 }
 
-ol#about-nav {
+.about-nav {
   @extend .unstyled;
   @include clearfix;
+
   li {
     display: inline;
     float: left;
     margin-right: 10px;
+
     &:last-child {
       margin-right: 0;
     }
+
     a {
+      @include background-image-2x('/images/icons/nav-circles', 100px, 200px);
+      display: block;
       width: 70px;
       height: 100px;
-      display: block;
-      opacity: 0.9;
-      text-align: center;
       padding: 0 15px;
       font-size: 14px;
       line-height: 17px;
       color: $font-color;
-      @include background-image-2x('/images/icons/nav-circles', 100px, 200px);
+      text-align: center;
+      opacity: 0.9;
+
       &.current {
         @include background-image-2x('/images/icons/nav-circles', 100px, 200px, 0 -100px);
         color: #fff;
         opacity: 1;
       }
+
       &.one-line {
-        padding-top: 42px;
         height: 58px;
+        padding-top: 42px;
       }
+
       &.two-line {
-        padding-top: 34px;
         height: 66px;
+        padding-top: 34px;
       }
+
       &.three-line {
-        padding-top: 25px;
         height: 75px;
+        padding-top: 25px;
       }
+
       &:hover {
         opacity: 1;
       }
@@ -100,56 +115,66 @@ ol#about-nav {
   }
 }
 
-ul.related-material {
+.related-material {
   @extend .unstyled;
-  font-size: 12px;
   margin-bottom: 3em;
+  font-size: 12px;
+
   li {
+    min-height: 17px;
+    padding-left: 25px;
     margin-bottom: 1em;
     line-height: 1.5;
-    padding-left: 25px;
-    min-height: 17px;
+
     &.reference {
       @include background-image-2x('/images/icons/document-sm', 12px, 17px, 3px 0);
     }
+
     &.book {
       @include background-image-2x('/images/icons/book-sm', 17px, 17px, 0 0);
     }
+
     &.video {
       @include background-image-2x('/images/icons/film-sm', 17px, 17px, 2px 0);
     }
   }
 }
 
-ul.stackoverflow {
+.stackoverflow {
   @extend .unstyled;
   font-size: 12px;
+
   li {
     margin-bottom: 1em;
   }
+
   a {
     display: block;
-    line-height: 1.2;
     font-weight: bold;
+    line-height: 1.2;
   }
+
   span {
     display: block;
     color: $light-font-color;
+
     strong {
       color: darken($light-font-color, 10%);
     }
+
     em {
       color: lighten($light-font-color, 20%);
     }
   }
 }
 
-table.binaries {
+.binaries-table {
   td {
-    padding: 8px 20px 6px 0;
     position: relative;
     width: auto;
+    padding: 8px 20px 6px 0;
   }
+
   a {
     font-weight: bold;
     border: solid 1px transparent;
