--- a/app/views/about/_free_and_open_source.html.erb
+++ b/app/views/about/_free_and_open_source.html.erb
@@ -1,4 +1,4 @@
-  <section class="about" id="free-and-open-source" style="display: none;">
+  <section class="about-section" id="free-and-open-source">
     <h2>Free and Open Source</h2>
     <p>Git is released under the <a href="http://opensource.org/licenses/GPL-2.0"
 	>GNU General Public License version 2.0</a>, which is an
