Man page cleanup

--- a/app/assets/stylesheets/man-pages.scss
+++ b/app/assets/stylesheets/man-pages.scss
@@ -1,11 +1,12 @@
 .man-page {
   p {
     em {
-      color: $fixed-width-font-color;
       font-family: $fixed-width-font-family !important;
-      font-weight: bold;
       font-style: normal;
+      font-weight: bold;
+      color: $fixed-width-font-color;
     }
+
     tt {
       @extend code;
       display: inline;
@@ -13,43 +14,43 @@
     }
   }
 
-  p.nutshell {
-    background-color: #e8e7dd;
+  .nutshell {
     padding: 1em;
+    background-color: #e8e7dd;
   }
 
   .literalblock {
+    margin-bottom: 15px;
+
     .content pre tt {
-      background-color: #eee0b5;
+      display: block;
       padding: 2px;
       font-family: $fixed-width-font-family !important;
-      display: block;
+      background-color: #eee0b5;
     }
-    margin-bottom: 15px;
   }
 
-  dt.hdlist1 {
+  .hdlist1 {
     font-family: $fixed-width-font-family !important;
   }
 
   // Man pages
-  div.verseblock {
-    pre.content {
-      background-color: #e8e7dd;
+  .verseblock {
+    .content {
       padding: 1em;
       margin-bottom: 1em;
-      white-space: pre;
-      color: $fixed-width-font-color;
       font-family: $fixed-width-font-family !important;
       line-height: $fixed-width-line-height;
+      color: $fixed-width-font-color;
+      word-wrap: break-word;
+      white-space: pre;
       white-space: pre-wrap;       /* css-3 */
       white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-      white-space: -pre-wrap;      /* Opera 4-6 */
-      white-space: -o-pre-wrap;    /* Opera 7 */
-      word-wrap: break-word;       /* Internet Explorer 5.5+ */
+      background-color: #e8e7dd;       /* Internet Explorer 5.5+ */
+
       em {
-        font-weight: bold;
         font-style: normal;
+        font-weight: bold;
       }
     }
   }
@@ -61,9 +62,10 @@
   }
 
   .quoteblock {
-    margin-left: 1em;
     padding-left: 1em;
+    margin-left: 1em;
     border-left: 5px solid $base-border-color;
+
     .content {
       .paragraph p {
         color: $light-font-color;
@@ -74,19 +76,19 @@
   .admonitionblock {
     table {
       margin-bottom: 1em;
+
       td {
         padding: 0 1em;
+
         .title {
           font-weight: bold;
           color: $orange;
         }
+
         &:first-child {
           border-right: solid 2px $base-border-color;
         }
       }
     }
-  }
-  #footer {
-    color: $light-font-color;
   }
 }
