Clean up reference page and dropdowns

--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -1,6 +1,6 @@
-<a class="dropdown-trigger" id="reference-versions-trigger" data-panel-id="previous-versions-dropdown" href="#">Version <%= @version.name %> ▾</a>
+<a class="dropdown-trigger js-dropdown-trigger reference-versions-trigger" data-panel-id="previous-versions-dropdown" href="#">Version <%= @version.name %> ▾</a>
 <span class="light"><%= @doc_file.name %> last updated in <%= @last.version.name %></span>
-<div class='dropdown-panel left' id='previous-versions-dropdown'>
+<div class="dropdown-panel previous-versions-dropdown left" id="previous-versions-dropdown">
   <header>Changes in the <strong><%= @doc_file.name %></strong> manual</header>
   <ol class='reference-previous-versions'>
     <% @doc_file.version_changes.each do |v| %>
