--- a/app/views/doc/man.html.erb
+++ b/app/views/doc/man.html.erb
@@ -6,7 +6,7 @@
     <%= render 'shared/related' %>
   <% end %>
 
-  <div id='reference-version'>
+  <div class='reference-version'>
     <%= render 'doc/topics' %>
     <%= render 'doc/versions' %>
   </div>
