--- a/app/views/doc/rebase.html.haml
+++ b/app/views/doc/rebase.html.haml
@@ -6,8 +6,8 @@
     %p
       The entire <strong><a href="#">Pro Git book</a></strong> written by Scott Chacon and Ben Straub is available to <a href="#">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
 
-%div#reference-version
-  =link_to "Topics ▾", "#", {:class => 'dropdown-trigger', :id => 'reference-topics-trigger', 'data-panel-id' => 'topics-dropdown'}
+%div.reference-version
+  =link_to "Topics ▾", "#", {:class => 'dropdown-trigger js-dropdown-trigger reference-topics-trigger', 'data-panel-id' => 'topics-dropdown'}
   %div#topics-dropdown.dropdown-panel.right
     %div.three-column
       %div.column-left
@@ -120,9 +120,9 @@
 
 
 
-  =link_to "Version 1.7.9.4 ▾", "#", {:class => 'dropdown-trigger', :id => 'reference-versions-trigger', 'data-panel-id' => 'previous-versions-dropdown'}
+  =link_to "Version 1.7.9.4 ▾", "#", {:class => 'dropdown-trigger js-dropdown-trigger reference-versions-trigger', 'data-panel-id' => 'previous-versions-dropdown'}
   <span class="light">git-rebase last updated in 1.7.7.1</span>
-  %div#previous-versions-dropdown.dropdown-panel.left
+  %div#previous-versions-dropdown.dropdown-panel.previous-versions-dropdown.left
     %header
       Changes in the <strong>git-rebase</strong> manual
     %ol.reference-previous-versions
