--- a/app/views/shared/ref/_patching.html.erb
+++ b/app/views/shared/ref/_patching.html.erb
@@ -1,4 +1,4 @@
-<h3 class='patching'>Patching</h3>
+<h3 class='reference-topic-patching'>Patching</h3>
 <ul class='unstyled'>
   <li><%= man('git-apply') %></li>
   <li><%= man('git-cherry-pick') %></li>
