--- a/app/views/books/_chapters.html.erb
+++ b/app/views/books/_chapters.html.erb
@@ -1,4 +1,4 @@
-<a class="dropdown-trigger" id="book-chapters-trigger" data-panel-id="chapters-dropdown" href="#">Chapters ▾</a>
+<a class="dropdown-trigger js-dropdown-trigger" id="book-chapters-trigger" data-panel-id="chapters-dropdown" href="#">Chapters ▾</a>
 <div class='dropdown-panel' id='chapters-dropdown'>
   <div class="three-column">
     <div class='column-left'>
