--- a/app/views/doc/_topics.html.erb
+++ b/app/views/doc/_topics.html.erb
@@ -1,5 +1,5 @@
-<a class="dropdown-trigger" id="reference-topics-trigger" data-panel-id="topics-dropdown" href="#">Topics ▾</a>
-<div class='dropdown-panel right' id='topics-dropdown'>
+<a class="dropdown-trigger js-dropdown-trigger reference-topics-trigger" data-panel-id="topics-dropdown" href="#">Topics ▾</a>
+<div class='dropdown-panel right topics-dropdown' id='topics-dropdown'>
   <div class='three-column'>
     <div class='column-left'>
       <%= render 'shared/ref/setup' %>
