--- a/app/views/shared/ref/_branching.html.erb
+++ b/app/views/shared/ref/_branching.html.erb
@@ -1,4 +1,4 @@
-<h3 class='branching'>Branching and Merging</h3>
+<h3 class='reference-topic-branching'>Branching and Merging</h3>
 <ul class='unstyled'>
   <li><%= man('git-branch') %></li>
   <li><%= man('git-checkout') %></li>
