--- a/app/views/shared/ref/_debugging.html.erb
+++ b/app/views/shared/ref/_debugging.html.erb
@@ -1,4 +1,4 @@
-<h3 class='debugging'>Debugging</h3>
+<h3 class='reference-topic-debugging'>Debugging</h3>
 <ul class='unstyled'>
   <li><%= man('git-bisect') %></li>
   <li><%= man('git-blame') %></li>
