--- a/app/views/shared/ref/_inspection.html.erb
+++ b/app/views/shared/ref/_inspection.html.erb
@@ -1,4 +1,4 @@
-<h3 class='inspection'>Inspection and Comparison</h3>
+<h3 class='reference-topic-inspection'>Inspection and Comparison</h3>
 <ul class='unstyled'>
   <li><%= man('git-show') %></li>
   <li><%= man('git-log') %></li>
