--- a/app/views/shared/ref/_plumbing.html.erb
+++ b/app/views/shared/ref/_plumbing.html.erb
@@ -1,4 +1,4 @@
-<h3 class='plumbing'>Plumbing Commands</h3>
+<h3 class='reference-topic-plumbing'>Plumbing Commands</h3>
 <ul class='unstyled'>
   <li><%= man('git-cat-file') %></li>
   <li><%= man('git-commit-tree') %></li>
