--- a/app/views/shared/ref/_server.html.erb
+++ b/app/views/shared/ref/_server.html.erb
@@ -1,4 +1,4 @@
-<h3 class='server-admin'>Server Admin</h3>
+<h3 class='reference-topic-server-admin'>Server Admin</h3>
 <ul class='unstyled'>
   <li><%= man('git-daemon') %></li>
   <li><%= man('git-update-server-info') %></li>
