--- a/app/views/shared/ref/_setup.html.erb
+++ b/app/views/shared/ref/_setup.html.erb
@@ -1,4 +1,4 @@
-<h3 class='setup'>Setup and Config</h3>
+<h3 class='reference-topic-setup'>Setup and Config</h3>
 <ul class='unstyled'>
   <li><%= man('git-config') %></li>
   <li><%= man('git-help') %></li>
