--- a/app/views/shared/ref/_sharing.html.erb
+++ b/app/views/shared/ref/_sharing.html.erb
@@ -1,4 +1,4 @@
-<h3 class='sharing'>Sharing and Updating Projects</h3>
+<h3 class='reference-topic-sharing'>Sharing and Updating Projects</h3>
 <ul class='unstyled'>
   <li><%= man('git-fetch') %></li>
   <li><%= man('git-pull') %></li>
