--- a/app/views/shared/ref/_snapshot.html.erb
+++ b/app/views/shared/ref/_snapshot.html.erb
@@ -1,4 +1,4 @@
-<h3 class='snapshotting'>Basic Snapshotting</h3>
+<h3 class='reference-topic-snapshotting'>Basic Snapshotting</h3>
 <ul class='unstyled'>
   <li><%= man('git-add') %></li>
   <li><%= man('git-status') %></li>
