Remove sidebar divider image

--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -1,25 +1,23 @@
-hr.sidebar {
-  border: none ! important;
-  height: 12px;
-  width: 218px;
-  @include background-image-2x('/images/sidebar-divider', 218px, 12px);
-  margin-bottom: 2em;
-}
-
-aside.sidebar {
-  font-size: 13px ! important;
+.site-sidebar {
+  font-size: 13px !important;
   line-height: $base-line-height * 0.75;
+
   p {
-    font-size: 13px ! important;
+    font-size: 13px !important;
     line-height: $base-line-height * 0.75;
   }
 
+  hr {
+    border-top: solid 1px $base-border-color;
+    margin-bottom: 2em;
+  }
+
   .callout {
-    background-color: #ebe9e1;
-    background-color: rgba(223, 221, 213, .33);
     @include border-radius(3px);
     padding: 20px;
     color: lighten($font-color, 20%);
+    background-color: #ebe9e1;
+
     p {
       margin-bottom: 0;
     }
