--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -40,8 +40,9 @@ Translations started for
   <a href="/book/uk">Українська</a> and
   <a href="/book/uz/v2">Ўзбек</a>.
 </p>
-<hr class="sidebar"/>
-<p>
-The source of this book is <a href="https://github.com/progit/progit2">hosted on GitHub.</a></br>
-Patches, suggestions and comments are welcome.
-</p>
+
+<hr>
+
+<p>The source of this book is <a href="https://github.com/progit/progit2">hosted on GitHub.</a></p>
+
+<p>Patches, suggestions and comments are welcome.</p>
