--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<aside class="sidebar">
+<aside class="site-sidebar">
   <nav>
     <ul>
       <li>
@@ -40,7 +40,7 @@
       </li>
     </ul>
     <% if content_for(:sidebar) %>
-      <hr class="sidebar">
+      <hr>
       <%= yield :sidebar %>
     <% end %>
   </nav>
