Rename #main -> .site-content

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -30,12 +30,12 @@ aside {
 }
 
 
-.site-content {
+.site-content-wrapper {
   float: right;
   width: 702px;
 }
 
-#main {
+.site-content {
   @include border-radius(5px);
   padding: 22px;
   margin-bottom: 35px;
