--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -7,7 +7,7 @@
  <%= render 'list' %>
 <% end %>
 
-<div id="main" class="book">
+<div class="site-content book">
   <h1>
     <%= @newest_content[1]['title'] %>
     <% unless author = @newest_content[1]['author'] %>
