--- a/app/views/blog/post.html.erb
+++ b/app/views/blog/post.html.erb
@@ -4,7 +4,7 @@
   <%= render 'list' %>
 <% end %>
 
-<div id="main" class="book">
+<div class="site-content book">
   <h1>
     <%= @frontmatter['title'] %>
     <% unless author = @frontmatter['author'] %>
