--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -6,7 +6,7 @@
   <%= render 'shared/book' %>
 <% end %>
 
-<div id="main">
+<div class="site-content">
   <h1> Community</h1>
 
   <h2> Mailing List</h2>
