--- a/app/views/doc/blog.html.erb
+++ b/app/views/doc/blog.html.erb
@@ -1,7 +1,7 @@
 <% @section    = 'documentation' %>
 <% @subsection = 'book' %>
 
-<div id='main' class="book">
+<div class="site-content book">
   <h1><%= @frontmatter['title'] %></h1>
   <%=raw @content %>
 </div>
