--- a/app/views/doc/book_section.html.erb
+++ b/app/views/doc/book_section.html.erb
@@ -7,7 +7,7 @@
   <%= render 'shared/related' %>
 <% end %>
 
-<div id='main' class="book">
+<div class="site-content book">
   <% if !@content.title.empty? %>
     <h1><%= @content.cs_number %> <%=raw @content.chapter.title %> - <%=raw @content.title %></h1>
   <% end %>
