--- a/app/views/doc/ref.html.erb
+++ b/app/views/doc/ref.html.erb
@@ -2,20 +2,21 @@
 <%- @subsection = 'reference' %>
 <%- @page_title = "Git - Reference" %>
 
-<div id='main'>
+<div class="site-content">
   <h1>Reference</h1>
-  <div class='callout quickref'>
+
+  <div class="callout quickref">
     <p>
       Quick reference guides:
       <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub Cheat Sheet</a>
-      <small class='light'>(PDF) &nbsp;|&nbsp;</small>
+      <small class="light">(PDF) &nbsp;|&nbsp;</small>
       <a href="http://ndpsoftware.com/git-cheatsheet.html">Visual Git Cheat Sheet</a>
-      <small class='light'>(SVG | PNG)</small>
+      <small class="light">(SVG | PNG)</small>
     </p>
   </div>
-  <div class='reference-menu'>
-    <div class='two-column'>
-      <div class='column-left'>
+  <div class="reference-menu">
+    <div class="two-column">
+      <div class="column-left">
         <%= render 'shared/ref/setup' %>
         <%= render 'shared/ref/creating' %>
         <%= render 'shared/ref/snapshot' %>
@@ -24,7 +25,7 @@
         <%= render 'shared/ref/inspection' %>
         <%= render 'shared/ref/patching' %>
       </div>
-      <div class='column-right'>
+      <div class="column-right">
         <%= render 'shared/ref/debugging' %>
         <%= render 'shared/ref/email' %>
         <%= render 'shared/ref/external' %>
