--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -1,8 +1,9 @@
 <%- @section = "downloads" %>
 <%- @subsection = "" %>
 
-<div id="main">
+<div class="site-content">
   <h1>Download for Linux and Unix</h1>
+
   <p>It is easiest to install Git on Linux using the preferred package manager of your Linux distribution.</p>
 
   <h3>Debian/Ubuntu</h3>
@@ -25,7 +26,7 @@
 
   <h3>Solaris 11 Express</h3>
   <code>$ pkg install developer/versioning/git</code>
-  
+
   <h3>OpenBSD</h3>
   <code>$ pkg_add git</code>
 
