--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
     <div class="container">
       <div id="content-wrapper">
         <%= render partial: "shared/sidebar" %>
-        <div class="site-content">
+        <div class="site-content-wrapper">
           <%= yield %>
         </div>
       </div>
