--- a/app/views/site/results.html.erb
+++ b/app/views/site/results.html.erb
@@ -6,14 +6,14 @@
   <%= render 'shared/related' %>
 <% end %>
 
-<div id="main">
-  
+<div class="site-content">
+
   <h1><%= raw "Search results for <strong>#{h(@term)}</strong>" %></h1>
-  
+
   <% if @top.size > 0 %>
     <div class="callout top-matches">
       <ol class="full-search-results">
-        <% @top.each do |hit| %> 
+        <% @top.each do |hit| %>
           <li>
             <h3><%= link_to hit[:name], hit[:url] %></h3>
             <%= link_to hit[:url], hit[:url], class: 'url' %>
@@ -49,7 +49,7 @@
       <% end %>
     </ol>
   <% end %>
-  
+
   <% if @rest.size + @top.size == 0 %>
     <h2> Sorry, no search matches </h2>
   <% end %>
