--- a/app/views/site/sfc.html.erb
+++ b/app/views/site/sfc.html.erb
@@ -1,4 +1,4 @@
-<div id="main">
+<div class="site-content">
   <h1 id="sfc">Git and Software Freedom Conservancy</h1>
 
   <p>Git is a member project of <a href="http://sfconservancy.org/">Software
