--- a/app/views/site/svn.html.erb
+++ b/app/views/site/svn.html.erb
@@ -10,7 +10,7 @@
   table.ccmd td.g         { background: #e9e8e1; color: #444; }
 </style>
 
-<div id='main' class="book">
+<div class="site-content book">
   <h1>Git - SVN Crash Course</h1>
 
   <p>Welcome to the Git version control system! Here we will briefly
