--- a/app/views/books/commands.html.erb
+++ b/app/views/books/commands.html.erb
@@ -1,8 +1,9 @@
 <% @section    = 'documentation' %>
 <% @subsection = 'book' %>
 
-<div id='main' class='book'>
+<div class='site-content book'>
   <h1>Index of Commands</h1>
+
   <table class="commands">
   <% @groups.each do |title, commands| %>
     <tr>
