--- a/app/views/books/section.html.erb
+++ b/app/views/books/section.html.erb
@@ -7,7 +7,7 @@
   <%= render 'shared/related' %>
 <% end %>
 
-<div id='book-chapters'>
+<div id="book-chapters">
   <%= render 'chapters' %>
   <% if @book.edition == 2%>
     <span class="light" id="edition">
@@ -20,7 +20,7 @@
   <% end %>
 </div>
 
-<div id='main' class="book edition<%= @book.edition %>">
+<div class="site-content book edition<%= @book.edition %>">
   <% if !@content.title.empty? %>
     <h1><%= @content.cs_number %> <%=raw @content.chapter.title %> - <%=raw @content.title %></h1>
   <% end %>
