--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,8 +7,9 @@
   <%= render 'translations' %>
 <% end %>
 
-<div id='main'>
+<div class="site-content">
   <h1>Book</h1>
+
   <% if @book.edition == 2 %>
     <div style="float:right;margin: -20px 40px 0 40px;">
       <img  src="/images/progit2.png" width="118" height="157"/>
