--- a/app/views/doc/book.html.erb
+++ b/app/views/doc/book.html.erb
@@ -7,15 +7,16 @@
   <%= render 'translations' %>
 <% end %>
 
-<div id='main'>
+<div class="site-content">
   <h1>Book</h1>
+
   <img style="float:right;margin: -20px 40px 0 40px;" src="/images/books/pro-git@2x.jpg" width="118" height="157" />
   <p>
   The entire Pro Git book, written by Scott Chacon and Ben Straub and published by Apress, is available here. All content is licensed under the <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution Non Commercial Share Alike 3.0 license</a>.  Print versions of the book are available on <a href="http://www.amazon.com/gp/product/1430218339?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.</>
   </p>
-  <ol class='book-toc'>
+  <ol class="book-toc">
     <% @book.chapters.each do |chapter| %>
-    <li class='chapter'>
+    <li class="chapter">
     <h2><%= chapter.number %>. <a href="/book/<%= @book.code %>/<%=u chapter.sections.first.slug %>"><%=raw chapter.title %></a></h2>
       <ol>
         <% chapter.sections.each do |section| %>
@@ -29,7 +30,7 @@
       </ol>
     </li>
     <% end %>
-    <li class='chapter'>
+    <li class="chapter">
       <h2><a href="/book/commands">Index of Commands</a></h2>
     </li>
   </ol>
