--- a/app/assets/stylesheets/book.scss
+++ b/app/assets/stylesheets/book.scss
@@ -3,14 +3,15 @@
 }
 
 #book-container {
-  position: relative;
   @extend .callout;
-  background-color: transparent ! important;
-  border: solid 1px lighten($base-border-color, 10%);
+  position: relative;
   padding-top: 20px ! important;
   padding-bottom: 20px ! important;
   overflow: hidden;
+  background-color: transparent ! important;
+  border: solid 1px lighten($base-border-color, 10%);
 }
+
 #book-intro {
   position: absolute;
   top: 40px;
@@ -18,100 +19,117 @@
   width: 200px;
   font-size: 13px;
   text-align: center;
+
   p {
     padding-bottom: 20px;
   }
+
   img.creative-commons {
     display: block;
     margin: 10px auto;
   }
+
   .license {
     font-size: 11px;
     line-height: 1.3;
     color: $light-font-color;
   }
-  a#open-book {
-    font-weight: bold;
+
+  #open-book {
     display: block;
     margin-top: 10px;
     margin-bottom: 10px;
+    font-weight: bold;
   }
 }
+
 #flippy-book {
-  margin: 0 auto;
+  position: relative;
   width: 601px;
   height: 402px;
-  position: relative;
-  background: transparent url(/images/bg/flippy-book.png) 0px 0 no-repeat;
+  margin: 0 auto;
+  background: transparent url("/images/bg/flippy-book.png") 0 0 no-repeat;
   -webkit-perspective: 1500;
   -moz-perspective: 1500;
   perspective: 1500;
 }
+
 #flippy-book #book-cover {
+  position: absolute;
+  top: 0;
+  left: 4px;
   width: 298px;
   height: 398px;
-  position: absolute;
-  left: 4px;
-  top: 0;
 }
+
 .webkit #flippy-book #book-cover {
-  left: auto;
   right: 6px;
+  left: auto;
+  -moz-transition-duration: 1.2s;
+  transition-duration: 1.2s;
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
   transform-style: preserve-3d;
   -webkit-transition-duration: 1.2s;
-  -moz-transition-duration: 1.2s;
-  transition-duration: 1.2s;
 }
+
 .webkit #flippy-book #book-cover.open {
-  -webkit-transform-origin: -1px 0;
-  -moz-transform-origin: -1px 0;
-  transform-origin: -1px 0;
   -webkit-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-180deg);
   transform: rotateY(-180deg);
+  -webkit-transform-origin: -1px 0;
+  transform-origin: -1px 0;
+  -moz-transform-origin: -1px 0;
+  -moz-transform: rotateY(-180deg);
 }
+
 .webkit #flippy-book #book-cover.close {
   -webkit-transform-origin: 0 0;
-  -moz-transform-origin: 0 0;
   transform-origin: 0 0;
+  -moz-transform-origin: 0 0;
 }
+
 #flippy-book #book-cover-outside {
+  @include background-image-2x("/images/pro-git-298x398", 298px, 398px, 0 0, no-repeat, jpg);
   display: none;
   width: 298px;
   height: 398px;
-  color: black;
-  @include background-image-2x('/images/pro-git-298x398', 298px, 398px, 0 0, no-repeat, jpg);
-  background-color: #000102;
+  color: #000;
   text-indent: -9999px;
   cursor: pointer;
+  background-color: #000102;
 }
+
 #flippy-book #book-cover.close {
-  display: block;
-  left: auto;
   right: 6px;
+  left: auto;
+  display: block;
 }
+
 #flippy-book #book-cover.close #book-cover-outside {
   display: block;
 }
+
 .three-dee #flippy-book #book-cover-outside {
   display: block;
 }
+
 #flippy-book #book-cover-inside {
+  right: 4px;
   width: 298px;
   height: 398px;
-  right: 4px;
-  background: #fff url(/images/bg/flippy-book-inside-cover.png) 0 0 no-repeat;
+  background: #fff url("/images/bg/flippy-book-inside-cover.png") 0 0 no-repeat;
 }
+
 .three-dee #flippy-book #book-cover-inside {
   -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
   transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
 }
+
 #flippy-book .face {
   position: absolute;
 }
+
 .three-dee #flippy-book .face {
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
@@ -128,37 +146,42 @@
 
 #flippy-book span.header {
   display: block;
-  text-align: center;
-  color: $light-font-color;
-  font-size: 12px;
   margin-top: 8px;
+  font-size: 12px;
+  color: $light-font-color;
+  text-align: center;
 }
 
 #about-book {
+  @include background-image-2x("/images/icons/info", 18px, 17px, 40px 1px);
   display: none;
-  text-indent: 40px;
-  text-align: center;
+  padding-left: 22px;
   font-size: 12px;
   color: $light-font-color;
-  padding-left: 22px;
-  @include background-image-2x('/images/icons/info', 18px, 17px, 40px 1px);
+  text-align: center;
+  text-indent: 40px;
+
   &.visible {
     display: inline-block;
   }
 }
 
-ol.book-toc {
+.book-toc {
   @extend .unstyled;
   margin: 30px 36px;
-  li.chapter {
+
+  .chapter {
     margin-bottom: 0.6em;
   }
+
   ol {
     list-style: none;
   }
+
   h2 {
     color: $font-color;
   }
+
   a {
     padding-left: 4px;
   }
@@ -174,52 +197,62 @@ ol.book-toc {
   overflow: auto;
 }
 
-.book table.commands {
+.book .commands {
   font-size: 1.2em;
-}
-.book table.commands tr td {
-  padding: 2px;
-}
-.book table.commands tr td small {
-  color: #777;
-  font-size: 0.8em;
+
+  tr td {
+    padding: 2px;
+
+    small {
+      font-size: 0.8em;
+      color: #777;
+    }
+  }
 }
 
-.book table.ref {
+.book .ref {
+  width: 100%;
   margin-bottom: 10px;
-  width:  100%;
+
+  tr {
+    border: 1px solid;
+    border-color: #777;
+  }
 }
 
-.book table.ref tr {
-  border-color: #777;
-  border: 1px solid;
-}
-
-.book table.ref th, td {
+.book .ref th,
+.book .ref td {
   padding: 5px;
 }
 
-.book table.ref th:nth-child(1), td:nth-child(1) {
-  padding: 5px;
+.book table.ref th:nth-child(1),
+td:nth-child(1) {
   width: 25%;
+  padding: 5px;
 }
 
 #book-chapters {
   @extend .section-nav-container;
+
   #chapters-dropdown {
-    padding: 12px;
     top: 30px;
+    padding: 12px;
   }
+
   ol {
     margin: 0;
+
     li {
-      line-height: $base-line-height * .8;
+      line-height: $base-line-height * 0.8;
+
       h2 {
-        font-size: 14px;
         margin-top: 0;
+        font-size: 14px;
       }
+
       ol {
         margin-left: 0;
+
         a {
           font-weight: normal;
         }
